# BayesFlowTrainable

./: .gitmodules  README.md  environment.yml  eval_with_ground_truth.py  evaluate_model.ipynb  evaluate_test.ipynb  pyproject.toml  test.py
configs/: default_config.py
src/bayesrun/: bayesflow_interface.py  custom_prior.py  data_reader.py  input_configuration.py  simulator.py  summary_networks.py  trainer.py
src/bayesrun/util/: custom_types.py  enums.py  helper.py  logger.py  positional_encodings.py
