[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bayesrun"
version = "0.0.1"
authors = [
  { name="Lea Zimmermann", email="lea.zimmermann@iwr.uni-heidelberg.de" },
]
description = "More convenient BayesFlow runs"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry]
include = [
    { path = "bayesrun"}
]